[package]
name = "sgui2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
derivative = "2.2.0"
num = "0.4.0"
once_cell = "1.17.0"
sdl2 = { version = "0.35.2", features = ["unsafe_textures", "ttf"] }
